Fixed 1.8 dependency.